--- a/Cosmetic Personality Game.html
+++ b/Cosmetic Personality Game.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0095)file:///C:/Users/85298/OneDrive%20-%20Heung%20To%20Middle%20School/%E6%96%87%E4%BB%B6/game.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmetic Personality Game</title>
+    <title>Skincare Product Personality Game</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,21 +25,21 @@
 </head>
 <body>
 
-    <h1>Welcome to the Cosmetic Personality Game!</h1>
+    <h1>Welcome to the Skincare Personality Game!</h1>
     <p id="story">
-        Join Lily and her friends in creating a beautiful, sustainable look for a charity event. 
-        Discover which cosmetic matches your personality through a series of choices.
+        Discover which skincare product best matches your personality 
+        through a series of choices. Let's find out if you're a Cleanser, Toner, Moisturizer, Eye Cream, Exfoliant, or Mask!
     </p>
     <button id="startButton">Start</button>
 
     <div id="quiz" class="hidden">
         <h2 id="question"></h2>
-        <button id="optionA" onclick="selectOption(&#39;A&#39;)"></button>
-        <button id="optionB" onclick="selectOption(&#39;B&#39;)"></button>
+        <button id="optionA" onclick="selectOption('A')"></button>
+        <button id="optionB" onclick="selectOption('B')"></button>
     </div>
 
     <div id="result" class="hidden">
-        <h2>Your Matching Cosmetic:</h2>
+        <h2>Your Matching Skincare Product:</h2>
         <p id="resultMessage"></p>
         <button onclick="restartGame()">Play Again</button>
     </div>
@@ -47,45 +47,45 @@
     <script>
         const questions = [
             {
-                question: "How do you think Lily's friends would approach the challenge?",
+                question: "How do you prefer to start your skincare routine?",
                 options: {
-                    A: "Natural beauty that highlights individuality.",
-                    B: "Bold colors reflect lively spirits."
+                    A: "I love refreshing my face with a clean slate.",
+                    B: "I enjoy a gentle prep that balances my skin."
                 }
             },
             {
-                question: "What would Lily do to boost her friends' confidence?",
+                question: "What's your go-to when your skin feels dry?",
                 options: {
-                    A: "Brightens smiles and captures attention.",
-                    B: "Enhances radiance and inner glow."
+                    A: "I reach for creamy hydration to lock in moisture.",
+                    B: "I apply a soothing treatment to rejuvenate my eyes."
                 }
             },
             {
-                question: "How would Lily ensure every detail aligns with the mission?",
+                question: "How do you maintain your skin's youth?",
                 options: {
-                    A: "Gentle yet impactful, environmentally conscious approach.",
-                    B: "Thoughtful design with minimal waste."
+                    A: "I exfoliate regularly for a fresh start.",
+                    B: "I unwind with a pampering mask to restore glow."
                 }
             },
             {
-                question: "What unique techniques would create a show-stopping look?",
+                question: "What is essential in your skincare arsenal?",
                 options: {
-                    A: "Harmonious blending creates artistic expression.",
-                    B: "Bold combinations for an imaginative look."
+                    A: "A gentle cleanser to remove impurities.",
+                    B: "A toner for that refreshing finish."
                 }
             },
             {
-                question: "How would Lily encourage positivity on social media?",
+                question: "How do you feel about trying new techniques?",
                 options: {
-                    A: "Share joyful moments and vibrant energy.",
-                    B: "Spirit and enthusiasm inviting everyone to join."
+                    A: "I'm all about experimenting with exfoliants.",
+                    B: "I love to indulge in hydrating masks."
                 }
             },
             {
-                question: "How would Lily's friends create a cohesive appearance?",
+                question: "What fragrance do you prefer in skincare?",
                 options: {
-                    A: "Unified appearance symbolizing shared commitment.",
-                    B: "Diverse elements showcasing teamwork and connection."
+                    A: "Fresh and clean scents are my favorite.",
+                    B: "Light floral tones that soothe the senses."
                 }
             }
         ];
@@ -122,20 +122,63 @@
         function showResult() {
             document.getElementById("quiz").classList.add("hidden");
             document.getElementById("result").classList.remove("hidden");
-            determineCosmetic();
+            determineSkincareProduct();
         }
 
-        function determineCosmetic() {
-            // Basic logic to determine result based on choices:
-            let scoreA = playerChoices.filter(choice => choice === 'A').length;
+        function determineSkincareProduct() {
+            let score = {
+                Cleanser: 0,
+                Toner: 0,
+                Moisturizer: 0,
+                EyeCream: 0,
+                Exfoliant: 0,
+                Mask: 0
+            };
 
+            playerChoices.forEach(choice => {
+                if (choice === 'A') {
+                    score.Cleanser++;
+                    score.Exfoliant++;
+                } else {
+                    score.Toner++;
+                    score.EyeCream++;
+                    score.Moisturizer++;
+                    score.Mask++;
+                }
+            });
+
+            let maxScore = Math.max(...Object.values(score));
+            let resultProduct;
+
+            // Determine which product has the highest score
+            for (const product in score) {
+                if (score[product] === maxScore) {
+                    resultProduct = product;
+                    break;
+                }
+            }
+
+            // Return the matching product in a friendly message
             let message;
-            if (scoreA >= 4) {
-                message = "You match with a Natural Glow Foundation!";
-            } else if (scoreA >= 2) {
-                message = "You match with a Vibrant Color Lipstick!";
-            } else {
-                message = "You match with a Creative Eyeshadow Palette!";
+            switch (resultProduct) {
+                case "Cleanser":
+                    message = "You match with a Refreshing Cleanser!";
+                    break;
+                case "Toner":
+                    message = "You match with a Balancing Toner!";
+                    break;
+                case "Moisturizer":
+                    message = "You match with a Hydrating Moisturizer!";
+                    break;
+                case "EyeCream":
+                    message = "You match with an Soothing Eye Cream!";
+                    break;
+                case "Exfoliant":
+                    message = "You match with an Exfoliating Scrub!";
+                    break;
+                case "Mask":
+                    message = "You match with a Pampering Mask!";
+                    break;
             }
 
             document.getElementById("resultMessage").innerText = message;
@@ -150,5 +193,5 @@
         }
     </script>
 
-
-</body></html>
+</body>
+</html>
